# geval

./: .gitignore  LICENSE  README.md  debug.ipynb  pyproject.toml
experiments/: fd_inception_cifar10-train-cifar10-iter400k-seed777_nimage-50000.txt  inception_scores_nimage-50000.npz
geval/: evaluator.py  evaluator_legacy.py  features.py  ffhq256_2d_data.npz  ffhq64_2d_data.npz  fid_kid.py  frechet_distance.py  inception_score.py  kernel_distance.py  landmarks.py  landmarks_dlib.py  precision_recall.py  rarity.py  requirements.txt  utils.py
scripts/: compute_reps.py  compute_stats.py  encode_features.py  extract_features.py  run_experiments.sh
src/geval/: __init__.py  clean_resize.py  cli.py  data.py  dataloaders.py  download.py  features.py  representations.py  resize.py  resizer.py  script_util.py
src/geval/encoders/: __init__.py  clip.py  dinov2.py  inception.py
src/geval/heatmaps/: gradcam.py  heatmaps.py  heatmaps_utils.py
src/geval/metrics/: __init__.py  authpct.py  ct.py  fd.py  fls.py  inception_score.py  mmd.py  prdc.py  sw.py  vendi.py
src/geval/models/: __init__.py  clip.py  convnext.py  dinov2.py  encoder.py  inception.py  load_encoder.py  mae.py  pixel.py  simclr.py
