[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "G-eval"
version = "0.1.0"  # Set an appropriate version number
dependencies = [
  "numpy",
  "opencv-python-headless>=4.6.0",
  "open_clip_torch>=2.19.0",
  "pandas>=1.5.3",
  "scikit-image>=0.19.3",
  "scikit-learn>=1.1.3",
  "scipy>=1.9.3",
  "timm",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.26.0",
  "clean-fid",
  "huggingface",
]
requires-python = ">=3.8.0, <3.12.0"
authors = [
  {name = "Kunhee Kim", email = "kunhee.kim@kaist.ac.kr"},
  {name = "NaHyeon Park", email = "julia19@kaist.ac.kr"},
]
description = "Package for evaluating deep generative models"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/kunheek/geval"  # Replace with your project's repository URL

[project.scripts]
geval = "geval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
